--- a/index.html
+++ b/index.html
@@ -38,45 +38,106 @@
               <a href="#" class="menu__link">Контакти</a>
             </li>
           </ul>
-          <button
-            type="button"
-            class="menu-button"
-            aria-expanded="false"
-            aria-controls="mobile-menu"
-            data-menu-button
-          >
-            <svg
-              width="40px"
-              height="40px"
-              aria-label="Перемикач мобільного меню"
-            >
-              <use class="icon-cross" href="./images/icons.svg#icon-cross"></use>
-              <use class="icon-menu" href="./images/icons.svg#icon-menu"></use>
-            </svg>
-          </button>
-          <div class="mobile-menu" id="mobile-menu" data-menu></div>
         </nav>
         <ul class="contact-list list">
           <li class="contact-list__item">
-            <a
-              href="mailto:info@devstudio.com"
-              class="contact-list__link "
-              ><svg class="contact-list__icon contact-list__icon--enve" width="16px" height="12px">
+            <a href="mailto:info@devstudio.com" class="contact-list__link"
+              ><svg
+                class="contact-list__icon contact-list__icon--enve"
+                width="16px"
+                height="12px"
+              >
                 <use href="./images/icons.svg#icon-envelope"></use></svg
               >info@devstudio.com</a
             >
           </li>
           <li class="contact-list__item">
-            <a
-              href="tel:+380961111111"
-              class="contact-list__link "
-            >
-              <svg class="contact-list__icon contact-list__icon--sma" width="10px" height="16px">
+            <a href="tel:+380961111111" class="contact-list__link">
+              <svg
+                class="contact-list__icon contact-list__icon--sma"
+                width="10px"
+                height="16px"
+              >
                 <use href="./images/icons.svg#icon-smartphone"></use></svg
               >+38 096 111 11 11</a
             >
           </li>
         </ul>
+
+        <button type="button" class="menu-button" data-menu-open>
+          <svg
+            width="40px"
+            height="40px"
+            aria-label="Перемикач мобільного меню"
+          >
+            <use class="icon-menu" href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
+
+        <div class="mobile-menu is-hidden" data-menu>
+          <button
+            type="button"
+            class="mobile-menu__button menu-button"
+            data-menu-close
+          >
+            <svg class="icon-cross" width="40px" height="40px">
+              <use
+                href="./images/icons.svg#icon-cross"
+              ></use>
+            </svg>
+          </button>
+          <div class="mobile-menu__container">
+            <div class="mobile-nav">
+              <ul class="nav-list list">
+                <li class="nav-list__item">
+                  <a class="nav-list__link nav-list__link--active" href="./">Студія</a>
+                </li>
+                <li class="nav-list__item">
+                  <a class="nav-list__link" href="./portfolio.html"
+                    >Портфоліо</a
+                  >
+                </li>
+                <li class="nav-list__item">
+                  <a class="nav-list__link" href="#">Контакти</a>
+                </li>
+              </ul>
+            </div>
+            <div class="mob-menu-wrap">
+              <div class="mobile-contacts">
+                <ul class="contacts-list list">
+                  <li class="contacts-list__item">
+                    <a
+                      href="tel:+380961111111"
+                      class="contacts-list__link contacts-list__link--tel"
+                      >+38 096 111 11 11</a
+                    >
+                  </li>
+                  <li class="contacts-list__item">
+                    <a
+                      href="mailto:info@devstudio.com"
+                      class="contacts-list__link contacts-list__link--mail"
+                      >info@devstudio.com</a
+                    >
+                  </li>
+                </ul>
+                <ul class="social-list list">
+                  <li class="social-list__item">
+                    <a class="social-list__link" href="#">Instagram</a>
+                  </li>
+                  <li class="social-list__item">
+                    <a class="social-list__link" href="#">Twitter</a>
+                  </li>
+                  <li class="social-list__item">
+                    <a class="social-list__link" href="#">Facebook</a>
+                  </li>
+                  <li class="social-list__item">
+                    <a class="social-list__link" href="#">LinkedIn</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
 
