--- a/index.html
+++ b/index.html
@@ -474,13 +474,13 @@
                   media="(min-width: 480px)"
                 />
                 <img
-                class="img"
-                src="./images/member-mob4@1.jpg "
-                width="450"
-                alt="Михайло Єрмаков"
-              />
+                  class="img"
+                  src="./images/member-mob4@1.jpg "
+                  width="450"
+                  alt="Михайло Єрмаков"
+                />
               </picture>
-              
+
               <div class="member-cont">
                 <h3 class="member-title">Михайло Єрмаков</h3>
                 <p lang="en" class="team-list-text">UI Designer</p>
@@ -735,9 +735,11 @@
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
-              <span class="policy-text">Погоджуюся з розсилкою та приймаю</span>
-              <a class="policy-link" href="#">Умови договору</a></label
-            >
+              <span class="policy-text"
+                >Погоджуюся з розсилкою та приймаю
+                <a class="policy-link" href="#">Умови договору</a></span
+              >
+            </label>
           </div>
           <button class="form-btn btn" type="submit">Відправити</button>
         </form>
